finishes implementing the dependant binary relevance

--- a/8_debugging_the_basic_stacking_model.ipynb
+++ b/8_debugging_the_basic_stacking_model.ipynb
@@ -1600,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1620,6 +1620,7 @@
     "        )\n",
     "\n",
     "        self.second_layer_classifiers = []\n",
+    "        self.labels_count = 0\n",
     "\n",
     "        # self.second_layer_classifiers = BinaryRelevance(\n",
     "        #     classifier=second_base_classifier,\n",
@@ -1637,55 +1638,159 @@
     "        first_layer_sum = np.sum(np.sum(formatted_first_layer_predictions, axis=1))\n",
     "        print(\"FIT: summing the values (for first layer):\", first_layer_sum)\n",
     "\n",
-    "        labels_count = y.shape[1]\n",
+    "        self.labels_count = y.shape[1]\n",
     "\n",
-    "        for i in range(labels_count):\n",
-    "            additional_input = formatted_first_layer_predictions[:, ~i]\n",
+    "        for i in range(self.labels_count):\n",
+    "            labels_to_expand = [x for x in range(self.labels_count) if x != i]\n",
+    "            print(f\"these are labels_to_expand: {labels_to_expand} | {i}\")\n",
+    "\n",
+    "            additional_input = formatted_first_layer_predictions[:, labels_to_expand]\n",
     "            print(f\"FIT: additional input shape is {additional_input.shape}\")\n",
     "\n",
+    "            X_expanded = np.hstack([X.todense(), additional_input])\n",
+    "            X_expanded = np.asarray(X_expanded)\n",
     "\n",
-    "        # print(f\"FIT: X_extended shape is {X_expanded.shape}\")\n",
-    "        # self.second_layer_classifiers.fit(X_expanded, y)\n",
+    "            print(f\"FIT: X_extended shape, for label {i}, is {X_expanded.shape}\")\n",
+    "\n",
+    "            label_specific_y = y.todense()[:, i]\n",
+    "            label_specific_y = self.convert_matrix_to_vector(label_specific_y)\n",
+    "\n",
+    "            label_specific_classifier = copy.deepcopy(self.second_base_classifier)\n",
+    "            label_specific_classifier.fit(X_expanded, label_specific_y)\n",
+    "\n",
+    "            self.second_layer_classifiers.append(label_specific_classifier)\n",
+    "\n",
+    "    def convert_matrix_to_vector(self, matrix: Any):\n",
+    "        return np.asarray(matrix).reshape(-1)\n",
+    "\n",
     "    \n",
     "    def predict(self, X: Any): # type: ignore\n",
+    "        if self.labels_count == 0:\n",
+    "            raise Exception(\"you must call `fit` before calling `predict`\")\n",
+    "\n",
     "        print(f\"PREDICT: X shape is {X.shape}\")\n",
     "        first_layer_predictions = self.first_layer_classifiers.predict(X)\n",
     "        formatted_first_layer_predictions = first_layer_predictions.todense()\n",
     "\n",
-    "        X_expanded = np.hstack([X.todense(), formatted_first_layer_predictions])\n",
+    "        second_layer_predictions = []\n",
+    "        for i in range(self.labels_count):\n",
+    "            labels_to_expand = [x for x in range(self.labels_count) if x != i]\n",
+    "            print(f\"these are labels_to_expand: {labels_to_expand} | {i}\")\n",
     "\n",
-    "        print(\"PREDICT: summing the values (for first layer):\", np.sum(np.sum(formatted_first_layer_predictions, axis=1)))\n",
-    "        print(f\"PREDICT: X_extended shape is {X_expanded.shape}\")\n",
+    "            additional_input = formatted_first_layer_predictions[:, labels_to_expand]\n",
+    "            print(f\"PREDICT: additional input shape is {additional_input.shape}\")\n",
     "\n",
-    "        second_layer_predictions = self.second_layer_classifiers.predict(X_expanded)\n",
-    "        formatted_second_layer_predictions = second_layer_predictions.todense()\n",
+    "            X_expanded = np.hstack([X.todense(), additional_input])\n",
+    "            X_expanded = np.asarray(X_expanded)\n",
     "\n",
-    "        print(\"PREDICT: summing the values (for second layer):\", np.sum(np.sum(formatted_second_layer_predictions, axis=1)))\n",
+    "            print(f\"PREDICT: X_extended shape, for label {i}, is {X_expanded.shape}\")\n",
     "\n",
-    "        return second_layer_predictions"
+    "            temp_preds = self.second_layer_classifiers[i].predict(X_expanded)\n",
+    "            print(f\"temp_preds shape is {temp_preds.shape}\")\n",
+    "            \n",
+    "            second_layer_predictions.append(temp_preds)\n",
+    "\n",
+    "        reshaped_array = np.asarray(second_layer_predictions).T\n",
+    "        return reshaped_array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'copy' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-10-36681651439f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mm\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mDependantBinaryRelevance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdatasets\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"scene\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"X_train\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdatasets\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"scene\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"y_train\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-9-b588ae5dfcf9>\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, classifier, require_dense)\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfirst_base_classifier\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdeepcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mclassifier\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msecond_base_classifier\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdeepcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mclassifier\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'copy' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FIT: X shape is (1211, 294)\n",
+      "FIT: summing the values (for first layer): 1286\n",
+      "these are labels_to_expand: [1, 2, 3, 4, 5] | 0\n",
+      "FIT: additional input shape is (1211, 5)\n",
+      "FIT: X_extended shape, for label 0, is (1211, 299)\n",
+      "these are labels_to_expand: [0, 2, 3, 4, 5] | 1\n",
+      "FIT: additional input shape is (1211, 5)\n",
+      "FIT: X_extended shape, for label 1, is (1211, 299)\n",
+      "these are labels_to_expand: [0, 1, 3, 4, 5] | 2\n",
+      "FIT: additional input shape is (1211, 5)\n",
+      "FIT: X_extended shape, for label 2, is (1211, 299)\n",
+      "these are labels_to_expand: [0, 1, 2, 4, 5] | 3\n",
+      "FIT: additional input shape is (1211, 5)\n",
+      "FIT: X_extended shape, for label 3, is (1211, 299)\n",
+      "these are labels_to_expand: [0, 1, 2, 3, 5] | 4\n",
+      "FIT: additional input shape is (1211, 5)\n",
+      "FIT: X_extended shape, for label 4, is (1211, 299)\n",
+      "these are labels_to_expand: [0, 1, 2, 3, 4] | 5\n",
+      "FIT: additional input shape is (1211, 5)\n",
+      "FIT: X_extended shape, for label 5, is (1211, 299)\n"
      ]
     }
    ],
    "source": [
     "m = DependantBinaryRelevance()\n",
     "m.fit(datasets[\"scene\"][\"X_train\"], datasets[\"scene\"][\"y_train\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PREDICT: X shape is (1196, 294)\n",
+      "these are labels_to_expand: [1, 2, 3, 4, 5] | 0\n",
+      "PREDICT: additional input shape is (1196, 5)\n",
+      "PREDICT: X_extended shape, for label 0, is (1196, 299)\n",
+      "temp_preds shape is (1196,)\n",
+      "these are labels_to_expand: [0, 2, 3, 4, 5] | 1\n",
+      "PREDICT: additional input shape is (1196, 5)\n",
+      "PREDICT: X_extended shape, for label 1, is (1196, 299)\n",
+      "temp_preds shape is (1196,)\n",
+      "these are labels_to_expand: [0, 1, 3, 4, 5] | 2\n",
+      "PREDICT: additional input shape is (1196, 5)\n",
+      "PREDICT: X_extended shape, for label 2, is (1196, 299)\n",
+      "temp_preds shape is (1196,)\n",
+      "these are labels_to_expand: [0, 1, 2, 4, 5] | 3\n",
+      "PREDICT: additional input shape is (1196, 5)\n",
+      "PREDICT: X_extended shape, for label 3, is (1196, 299)\n",
+      "temp_preds shape is (1196,)\n",
+      "these are labels_to_expand: [0, 1, 2, 3, 5] | 4\n",
+      "PREDICT: additional input shape is (1196, 5)\n",
+      "PREDICT: X_extended shape, for label 4, is (1196, 299)\n",
+      "temp_preds shape is (1196,)\n",
+      "these are labels_to_expand: [0, 1, 2, 3, 4] | 5\n",
+      "PREDICT: additional input shape is (1196, 5)\n",
+      "PREDICT: X_extended shape, for label 5, is (1196, 299)\n",
+      "temp_preds shape is (1196,)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.08904682274247491"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.6956372086517112"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "preds = m.predict(datasets[\"scene\"][\"X_test\"])\n",
+    "\n",
+    "print(metrics.hamming_loss(datasets[\"scene\"][\"y_test\"], preds))\n",
+    "print(metrics.f1_score(datasets[\"scene\"][\"y_test\"], preds, average=\"macro\"))"
    ]
   },
   {
