adds comments for the seventh test

--- a/8_debugging_the_basic_stacking_model.ipynb
+++ b/8_debugging_the_basic_stacking_model.ipynb
@@ -1696,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1727,13 +1727,13 @@
     }
    ],
    "source": [
-    "m = DependantBinaryRelevance()\n",
+    "m = DependantBinaryRelevance(RandomForestClassifier(random_state=42))\n",
     "m.fit(datasets[\"scene\"][\"X_train\"], datasets[\"scene\"][\"y_train\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1764,26 +1764,10 @@
       "these are labels_to_expand: [0, 1, 2, 3, 4] | 5\n",
       "PREDICT: additional input shape is (1196, 5)\n",
       "PREDICT: X_extended shape, for label 5, is (1196, 299)\n",
-      "temp_preds shape is (1196,)\n"
+      "temp_preds shape is (1196,)\n",
+      "0.08737458193979933\n",
+      "0.7065088014940012\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.08904682274247491"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.6956372086517112"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1791,6 +1775,19 @@
     "\n",
     "print(metrics.hamming_loss(datasets[\"scene\"][\"y_test\"], preds))\n",
     "print(metrics.f1_score(datasets[\"scene\"][\"y_test\"], preds, average=\"macro\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Notes**\n",
+    "\n",
+    "The model is working as expected and it is even able to bring some improvements to the metrics. We ere able to surpass the mark of 0.7 for the first time.\n",
+    "\n",
+    "Obviously, this is still down to some randomness, as I got slightly different results for different runs (without fixing the `random_state`).\n",
+    "\n",
+    "**This consistency shows that the model is working as expected**. Now let's go for the final test."
    ]
   },
   {
