finishes the eighth notebook

--- a/8_debugging_the_basic_stacking_model.ipynb
+++ b/8_debugging_the_basic_stacking_model.ipynb
@@ -1587,7 +1587,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Seventh test: make sure that the `BasicStacking` expands all labels but the label being predicted\n",
+    "### 8.4.7. Seventh test: make sure that the `BasicStacking` expands all labels but the label being predicted\n",
     "\n",
     "According to the article identified by `[6] AnEfficientStackingModelWithLabelSelection.pdf`, the **Stacked Generalization** algorithm should be implemented just like I implemented the `BasicStacking`, expanding all predicted labels from the first layer as input to the second layer.\n",
     "\n",
@@ -1794,7 +1794,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Eighth test: compare metrics to `StackingWithFTest` when `alpha=1`\n",
+    "### 8.4.8. Eighth test: compare metrics to `StackingWithFTest` when `alpha=1`\n",
     "\n",
     "Now it is the final test, with my actual model implementation. I will be copying and pasting it here again. In theory, when `alpha=1`, the results should be the same as the **Dependant Binary Relevance (DBR)**.\n",
     "\n",
@@ -2195,7 +2195,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# 8.5. Final conclusion\n",
+    "\n",
+    "After all the tests that were conducted, what can we conclude?\n",
+    "\n",
+    "The main question posed at the beginning of this notebook was: why the `BasicStacking` is producing the same results as the `BinaryRelevance` model? This is now answered: **because I was using `SVC` as the base classifier and, for some reason, it produces the same results regardless of the `random_state` and regardless of the data getting extra features** (the labels from the first layer). By changing to any other classifier, such as the `RandomForestClassifier`, it was possible to get different results and notice a difference between the `BinaryRelevance` and the `BasicStacking`.\n",
+    "\n",
+    "Other nice thing achieved here:\n",
+    "* A better implementation of `BasicStacking`.\n",
+    "* Also a better implementation of `StackingWithFTest`.\n",
+    "* A new basic model, which is the **Dependant Binary Relevance (DBR)**.\n",
+    "* It was demonstrated that the `StackingWithFTest` can beat the other models, even the DBR, showing that the expansion of some labels is actually a little harmful to the model, while some other labels are actually helpful."
+   ]
   }
  ],
  "metadata": {
