starts to work again on the third base model

--- a/6_third_model_actual_implementation.ipynb
+++ b/6_third_model_actual_implementation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,8 @@
     "from skmultilearn.problem_transform import ClassifierChain\n",
     "import pygad\n",
     "from typing import List\n",
-    "import sklearn.metrics as metrics"
+    "import sklearn.metrics as metrics\n",
+    "from typing import Any"
    ]
   },
   {
@@ -47,13 +48,18 @@
     "\n",
     "    def __init__(self, random_state: int) -> None:\n",
     "        self.random_state = random_state\n",
-    "        # TODO: later check if we should have a wait to avoid setting random state\n",
+    "        # TODO: later check if we should have a way to avoid setting random state\n",
     "        # or just do it randomly\n",
     "    \n",
-    "    def fit(self, y: Any):\n",
-    "        label_space = np.arange(y.shape[1])\n",
+    "    def run(self, X_train: Any, y_train: Any, X_test: Any, y_test: Any):\n",
+    "        self.X_train = X_train\n",
+    "        self.y_train = y_train\n",
+    "        self.X_test = X_test\n",
+    "        self.y_test = y_test\n",
     "\n",
-    "        ga_model = pygad.GA(\n",
+    "        label_space = np.arange(y_train.shape[1])\n",
+    "\n",
+    "        ga_model = pygad.GA( #type:ignore\n",
     "            gene_type=int,\n",
     "            gene_space=label_space\n",
     "            random_seed=self.random_state,\n",
@@ -78,9 +84,11 @@
     "            mutation_by_replacement=True,\n",
     "            mutation_num_genes=1,\n",
     "        )\n",
+    "\n",
+    "        ga_model.run()\n",
     "        \n",
     "    @staticmethod\n",
-    "    def model_fitness_func(ga_instance, solution, solution_idx):\n",
+    "    def model_fitness_func(self, ga_instance, solution, solution_idx):\n",
     "        if has_duplicates(solution):\n",
     "            print(\"solutions contains duplicated values, skipping\")\n",
     "            return 0\n",
@@ -89,7 +97,7 @@
     "            print(\"solutions contains negative values, skipping\")\n",
     "            return 0\n",
     "\n",
-    "        hamming_loss = test_ordering(solution)\n",
+    "        hamming_loss = self.test_ordering(solution)\n",
     "        return 1/hamming_loss\n",
     "        # this will be the fitness function result, and we want to maximize it\n",
     "        # therefore, we have to return the inverse of the hamming loss\n",
@@ -115,43 +123,6 @@
     "\n",
     "        hamming_loss = metrics.hamming_loss(\n",
     "            y_test, preds)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class ClassifierChainWithGeneticAlgorithm(MLClassifierBase):\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        base_classifier: Any = SVC(),\n",
-    "    ):\n",
-    "        super().__init__()\n",
-    "        self.order = []\n",
-    "        self.main_classifier = None\n",
-    "        self.copyable_attrs = [\"base_classifier\", \"alpha\"]\n",
-    "        # NOTE: this `copyable_attrs` must match exactly the arguments passed to the constructor\n",
-    "        \n",
-    "        self.base_classifier = base_classifier\n",
-    "    \n",
-    "    def fit(self, X: Any, y: Any):\n",
-    "        self.classes_ = np.arange(y.shape[1])\n",
-    "        # NOTE: this is required to run the evaluation pipeline\n",
-    "        \n",
-    "        self.order = build_chain_based_on_f_test(self.calculator.get(y))\n",
-    "        \n",
-    "        self.main_classifier = ClassifierChain(\n",
-    "            classifier=self.base_classifier,\n",
-    "            require_dense=[False, True],\n",
-    "            order=self.order,\n",
-    "        )\n",
-    "\n",
-    "        self.main_classifier.fit(X, y)\n",
-    "    \n",
-    "    def predict(self, X: Any):\n",
-    "        return self.main_classifier.predict(X)\n"
    ]
   }
  ],
