--- a/6_third_model_actual_implementation.ipynb
+++ b/6_third_model_actual_implementation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +14,13 @@
     "import sklearn.metrics as metrics\n",
     "from typing import Any\n",
     "import copy\n",
-    "from sklearn.ensemble import RandomForestClassifier"
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,18 +122,20 @@
     "\n",
     "        self.base_classifier = base_classifier\n",
     "\n",
-    "        self.X_train = None\n",
-    "        self.y_train = None\n",
-    "        self.X_test = None\n",
-    "        self.y_test = None\n",
+    "        self.x = None\n",
+    "        self.y = None\n",
     "    \n",
-    "    def run(self, X_train: Any, y_train: Any, X_test: Any, y_test: Any):\n",
-    "        self.X_train = X_train\n",
-    "        self.y_train = y_train\n",
-    "        self.X_test = X_test\n",
-    "        self.y_test = y_test\n",
+    "    def fit(self, X: Any, y: Any):\n",
+    "        print(\"STARTING\")\n",
     "\n",
-    "        label_space = np.arange(y_train.shape[1])\n",
+    "\n",
+    "        self.x = X\n",
+    "        self.y = y\n",
+    "\n",
+    "        print(f\"X shape is {self.x.shape}\")\n",
+    "        print(f\"Y shape is {self.y.shape}\")\n",
+    "\n",
+    "        label_space = np.arange(self.y.shape[1])\n",
     "\n",
     "        ga_model = pygad.GA( #type:ignore\n",
     "            gene_type=int,\n",
@@ -144,7 +147,7 @@
     "            num_genes=len(label_space),\n",
     "\n",
     "            # set up\n",
-    "            num_generations=10,\n",
+    "            num_generations=1,\n",
     "            num_parents_mating=2,\n",
     "            sol_per_pop=4,\n",
     "\n",
@@ -170,7 +173,7 @@
     "            order=solution,\n",
     "        )\n",
     "\n",
-    "        best_classifier.fit(self.X_train, self.y_train)\n",
+    "        best_classifier.fit(self.x, self.y)\n",
     "        return best_classifier\n",
     "        \n",
     "    def model_fitness_func(self, ga_instance: Any, solution: Any, solution_idx: Any) -> float:\n",
@@ -183,6 +186,7 @@
     "            return 0\n",
     "\n",
     "        hamming_loss = self.test_ordering(solution)\n",
+    "        hamming_loss = float(hamming_loss)\n",
     "        return 1/hamming_loss\n",
     "        # this will be the fitness function result, and we want to maximize it\n",
     "        # therefore, we have to return the inverse of the hamming loss\n",
@@ -196,41 +200,75 @@
     "            order=solution,\n",
     "        )\n",
     "\n",
-    "        classifier.fit(self.X_train, self.y_train)\n",
-    "        preds = classifier.predict(self.X_test)\n",
+    "        X_train, X_test, y_train, y_test = train_test_split(\n",
+    "            self.x, self.y, test_size=0.2, random_state=self.random_state\n",
+    "        )\n",
     "\n",
-    "        return metrics.hamming_loss(self.y_test, preds)\n",
+    "        print(f\"got this X_train: {X_train.shape}\")\n",
+    "        print(f\"got this y_train: {y_train.shape}\")\n",
+    "        print(f\"got this X_test: {X_test.shape}\")\n",
+    "        print(f\"got this y_test: {y_test.shape}\")\n",
+    "\n",
+    "\n",
+    "        classifier.fit(X_train, y_train)\n",
+    "        preds = classifier.predict(X_test)\n",
+    "\n",
+    "        return metrics.hamming_loss(y_test, preds)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "STARTING\n",
+      "X shape is (1211, 294)\n",
+      "Y shape is (1211, 6)\n",
       "testing order: [3 4 2 0 5 1]\n",
+      "got this X_train: (968, 294)\n",
+      "got this y_train: (968, 6)\n",
+      "got this X_test: (243, 294)\n",
+      "got this y_test: (243, 6)\n",
       "testing order: [2 5 1 4 3 0]\n",
+      "got this X_train: (968, 294)\n",
+      "got this y_train: (968, 6)\n",
+      "got this X_test: (243, 294)\n",
+      "got this y_test: (243, 6)\n",
       "testing order: [5 4 1 3 0 2]\n",
+      "got this X_train: (968, 294)\n",
+      "got this y_train: (968, 6)\n",
+      "got this X_test: (243, 294)\n",
+      "got this y_test: (243, 6)\n",
       "testing order: [1 3 4 0 2 5]\n",
+      "got this X_train: (968, 294)\n",
+      "got this y_train: (968, 6)\n",
+      "got this X_test: (243, 294)\n",
+      "got this y_test: (243, 6)\n",
       "testing order: [1 4 2 0 3 5]\n",
+      "got this X_train: (968, 294)\n",
+      "got this y_train: (968, 6)\n",
+      "got this X_test: (243, 294)\n",
+      "got this y_test: (243, 6)\n",
       "testing order: [3 1 2 0 5 4]\n",
-      "testing order: [1 3 2 0 4 5]\n",
-      "testing order: [1 4 2 0 5 3]\n",
-      "testing order: [4 1 2 0 5 3]\n",
-      "testing order: [1 4 3 0 2 5]\n",
-      "testing order: [4 1 2 0 5 3]\n",
-      "testing order: [1 3 2 0 5 4]\n",
-      "testing order: [1 3 2 0 5 4]\n",
-      "testing order: [1 4 2 0 5 3]\n",
-      "testing order: [1 3 5 0 2 4]\n",
-      "testing order: [2 1 3 0 5 4]\n",
-      "testing order: [1 3 0 2 5 4]\n",
-      "testing order: [3 2 1 0 5 4]\n",
-      "testing order: [3 2 1 0 5 4]\n"
+      "got this X_train: (968, 294)\n",
+      "got this y_train: (968, 6)\n",
+      "got this X_test: (243, 294)\n",
+      "got this y_test: (243, 6)\n",
+      "testing order: [1 4 2 0 3 5]\n",
+      "got this X_train: (968, 294)\n",
+      "got this y_train: (968, 6)\n",
+      "got this X_test: (243, 294)\n",
+      "got this y_test: (243, 6)\n",
+      "testing order: [3 1 2 0 5 4]\n",
+      "got this X_train: (968, 294)\n",
+      "got this y_train: (968, 6)\n",
+      "got this X_test: (243, 294)\n",
+      "got this y_test: (243, 6)\n"
      ]
     },
     {
@@ -240,7 +278,7 @@
        "                order=array([3, 1, 2, 0, 5, 4]), require_dense=[False, True])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,13 +288,13 @@
     "    base_classifier=RandomForestClassifier(random_state=42),\n",
     "    random_state=42,\n",
     ")\n",
-    "r = m.run(datasets[\"scene\"][\"X_train\"], datasets[\"scene\"][\"y_train\"], datasets[\"scene\"][\"X_test\"], datasets[\"scene\"][\"y_test\"])\n",
+    "r = m.fit(datasets[\"scene\"][\"X_train\"], datasets[\"scene\"][\"y_train\"])\n",
     "r"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
