--- a/6_third_model_actual_implementation.ipynb
+++ b/6_third_model_actual_implementation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,10 +12,11 @@
     "import pygad\n",
     "from typing import List\n",
     "import sklearn.metrics as metrics\n",
-    "from typing import Any\n",
+    "from typing import Any, Optional\n",
     "import copy\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "import math"
    ]
   },
   {
@@ -78,7 +79,6 @@
     "        \"labels_count\": y.shape[1]\n",
     "    }\n",
     "\n",
-    "\n",
     "for name, info in datasets.items():\n",
     "    print(\"===\")\n",
     "    print(f\"information for dataset `{name}`\")\n",
@@ -108,34 +108,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "class GeneticAlgorithmForMultiLabel:\n",
-    "    random_state: int\n",
-    "\n",
-    "    def __init__(self, base_classifier: Any, random_state: int) -> None:\n",
-    "        self.random_state = random_state\n",
-    "        # TODO: later check if we should have a way to avoid setting random state\n",
-    "        # or just do it randomly\n",
-    "\n",
+    "    def __init__(self, base_classifier: Any, num_generations: int = 5, random_state: Optional[int] = None) -> None:\n",
     "        self.base_classifier = base_classifier\n",
+    "        self.num_generations = num_generations\n",
     "\n",
-    "        self.x = None\n",
-    "        self.y = None\n",
+    "        if random_state is None:\n",
+    "            self.random_state = np.random.randint(0, 1000)\n",
+    "        else:\n",
+    "            self.random_state = random_state\n",
     "    \n",
     "    def fit(self, X: Any, y: Any):\n",
-    "        print(\"STARTING\")\n",
-    "\n",
-    "\n",
     "        self.x = X\n",
     "        self.y = y\n",
+    "        # this is the most practical way to pass the data to the fitness function\n",
     "\n",
-    "        print(f\"X shape is {self.x.shape}\")\n",
-    "        print(f\"Y shape is {self.y.shape}\")\n",
+    "        label_count = self.y.shape[1]\n",
+    "        if label_count < 3:\n",
+    "            raise Exception(\"label count is too low, we need at least 3 labels\")\n",
     "\n",
-    "        label_space = np.arange(self.y.shape[1])\n",
+    "        label_space = np.arange(label_count)\n",
+    "        solutions_per_population = math.ceil(label_count / 2)\n",
+    "        # to simplify the model, some heuristics are used\n",
     "\n",
     "        ga_model = pygad.GA( #type:ignore\n",
     "            gene_type=int,\n",
@@ -144,19 +142,21 @@
     "            save_best_solutions=False,\n",
     "            fitness_func=self.model_fitness_func,\n",
     "            allow_duplicate_genes=False, # very important, otherwise we will have duplicate labels in the ordering\n",
-    "            num_genes=len(label_space),\n",
+    "            num_genes=label_count,\n",
     "\n",
     "            # set up\n",
-    "            num_generations=1,\n",
-    "            num_parents_mating=2,\n",
-    "            sol_per_pop=4,\n",
+    "            num_generations=self.num_generations,\n",
+    "            sol_per_pop=solutions_per_population,\n",
     "\n",
     "            # following what the article describes\n",
     "            keep_elitism=1, # also following what the article describes, but we have to double check [TODO]\n",
     "            parent_selection_type=\"rws\", # following what the article describes\n",
     "            # mutation_probability=0.005, # following what the article describes\n",
     "\n",
-    "            # TODO let's check how the article defines this\n",
+    "            # the following settings are fixed\n",
+    "            # they were chosen for no particular reason\n",
+    "            # they are being kept as fixed to simplify the model\n",
+    "            num_parents_mating=2,\n",
     "            crossover_type=\"scattered\",\n",
     "            mutation_type=\"random\",\n",
     "            mutation_by_replacement=True,\n",
@@ -204,12 +204,6 @@
     "            self.x, self.y, test_size=0.2, random_state=self.random_state\n",
     "        )\n",
     "\n",
-    "        print(f\"got this X_train: {X_train.shape}\")\n",
-    "        print(f\"got this y_train: {y_train.shape}\")\n",
-    "        print(f\"got this X_test: {X_test.shape}\")\n",
-    "        print(f\"got this y_test: {y_test.shape}\")\n",
-    "\n",
-    "\n",
     "        classifier.fit(X_train, y_train)\n",
     "        preds = classifier.predict(X_test)\n",
     "\n",
@@ -219,74 +213,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "STARTING\n",
-      "X shape is (1211, 294)\n",
-      "Y shape is (1211, 6)\n",
-      "testing order: [3 4 2 0 5 1]\n",
-      "got this X_train: (968, 294)\n",
-      "got this y_train: (968, 6)\n",
-      "got this X_test: (243, 294)\n",
-      "got this y_test: (243, 6)\n",
-      "testing order: [2 5 1 4 3 0]\n",
-      "got this X_train: (968, 294)\n",
-      "got this y_train: (968, 6)\n",
-      "got this X_test: (243, 294)\n",
-      "got this y_test: (243, 6)\n",
-      "testing order: [5 4 1 3 0 2]\n",
-      "got this X_train: (968, 294)\n",
-      "got this y_train: (968, 6)\n",
-      "got this X_test: (243, 294)\n",
-      "got this y_test: (243, 6)\n",
-      "testing order: [1 3 4 0 2 5]\n",
-      "got this X_train: (968, 294)\n",
-      "got this y_train: (968, 6)\n",
-      "got this X_test: (243, 294)\n",
-      "got this y_test: (243, 6)\n",
-      "testing order: [1 4 2 0 3 5]\n",
-      "got this X_train: (968, 294)\n",
-      "got this y_train: (968, 6)\n",
-      "got this X_test: (243, 294)\n",
-      "got this y_test: (243, 6)\n",
-      "testing order: [3 1 2 0 5 4]\n",
-      "got this X_train: (968, 294)\n",
-      "got this y_train: (968, 6)\n",
-      "got this X_test: (243, 294)\n",
-      "got this y_test: (243, 6)\n",
-      "testing order: [1 4 2 0 3 5]\n",
-      "got this X_train: (968, 294)\n",
-      "got this y_train: (968, 6)\n",
-      "got this X_test: (243, 294)\n",
-      "got this y_test: (243, 6)\n",
-      "testing order: [3 1 2 0 5 4]\n",
-      "got this X_train: (968, 294)\n",
-      "got this y_train: (968, 6)\n",
-      "got this X_test: (243, 294)\n",
-      "got this y_test: (243, 6)\n"
+      "testing order: [5 2 4 0 1 3]\n",
+      "testing order: [2 3 1 5 0 4]\n",
+      "testing order: [1 0 4 2 3 5]\n",
+      "testing order: [2 3 0 1 5 4]\n",
+      "testing order: [2 3 4 5 1 0]\n",
+      "testing order: [2 3 0 1 5 4]\n",
+      "testing order: [2 3 4 5 1 0]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "ClassifierChain(classifier=RandomForestClassifier(random_state=42),\n",
-       "                order=array([3, 1, 2, 0, 5, 4]), require_dense=[False, True])"
+       "ClassifierChain(classifier=RandomForestClassifier(random_state=456),\n",
+       "                order=array([1, 0, 4, 2, 3, 5]), require_dense=[False, True])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "m = GeneticAlgorithmForMultiLabel(\n",
-    "    base_classifier=RandomForestClassifier(random_state=42),\n",
-    "    random_state=42,\n",
+    "    base_classifier=RandomForestClassifier(random_state=456),\n",
+    "    num_generations=1,\n",
+    "    random_state=123,\n",
     ")\n",
     "r = m.fit(datasets[\"scene\"][\"X_train\"], datasets[\"scene\"][\"y_train\"])\n",
     "r"
@@ -294,15 +253,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.205685618729097\n",
-      "0.31301095162100195\n"
+      "0.2568283166109253\n",
+      "0.13486096370513379\n"
      ]
     }
    ],
