--- a/6_third_model_actual_implementation.ipynb
+++ b/6_third_model_actual_implementation.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6. Third model actual implementation\n",
+    "\n",
+    "As a continuation for the previous notebook, in this notebook we are going to implement a base model for a ClassifierChain that tests different orders using genetic algorithm. No fancy selection method. Just a very raw testing of different orders via genetic algorithm."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.1. Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
@@ -17,6 +33,13 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "import math"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.2. Datasets"
    ]
   },
   {
@@ -86,6 +109,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.3. Implementation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -108,11 +138,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class GeneticAlgorithmForMultiLabel:\n",
+    "class ClassifierChainWithGeneticAlgorithm:\n",
     "    def __init__(self, base_classifier: Any, num_generations: int = 5, random_state: Optional[int] = None) -> None:\n",
     "        self.base_classifier = base_classifier\n",
     "        self.num_generations = num_generations\n",
@@ -212,6 +242,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.4. Testing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 51,
    "metadata": {},
@@ -242,7 +279,7 @@
     }
    ],
    "source": [
-    "m = GeneticAlgorithmForMultiLabel(\n",
+    "m = ClassifierChainWithGeneticAlgorithm(\n",
     "    base_classifier=RandomForestClassifier(random_state=456),\n",
     "    num_generations=1,\n",
     "    random_state=123,\n",
