--- a/6_third_model_actual_implementation.ipynb
+++ b/6_third_model_actual_implementation.ipynb
@@ -308,6 +308,67 @@
     "print(metrics.hamming_loss(datasets[\"scene\"][\"y_test\"], preds))\n",
     "print(metrics.f1_score(datasets[\"scene\"][\"y_test\"], preds, average=\"macro\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "testing order: [5 2 4 0 1 3]\n",
+      "testing order: [2 3 1 5 0 4]\n",
+      "testing order: [1 0 4 2 3 5]\n",
+      "testing order: [5 2 4 0 3 1]\n",
+      "testing order: [5 2 0 4 3 1]\n",
+      "testing order: [5 2 4 0 3 1]\n",
+      "testing order: [5 2 0 4 3 1]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ClassifierChain(classifier=RandomForestClassifier(random_state=456),\n",
+       "                order=array([1, 0, 4, 2, 3, 5]), require_dense=[False, True])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = ClassifierChainWithGeneticAlgorithm(\n",
+    "    base_classifier=RandomForestClassifier(random_state=456),\n",
+    "    num_generations=1,\n",
+    "    random_state=123,\n",
+    ")\n",
+    "r = m.fit(datasets[\"emotions\"][\"X_train\"], datasets[\"emotions\"][\"y_train\"])\n",
+    "r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.283003300330033\n",
+      "0.4931912029405572\n"
+     ]
+    }
+   ],
+   "source": [
+    "preds = r.predict(datasets[\"emotions\"][\"X_test\"])\n",
+    "\n",
+    "print(metrics.hamming_loss(datasets[\"emotions\"][\"y_test\"], preds))\n",
+    "print(metrics.f1_score(datasets[\"emotions\"][\"y_test\"], preds, average=\"macro\"))"
+   ]
   }
  ],
  "metadata": {
