creates better code for probs and entropies

--- a/9_fourth_model_implementation.ipynb
+++ b/9_fourth_model_implementation.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,9 @@
     "import copy\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import math"
+    "import math\n",
+    "from numpy.typing import NDArray\n",
+    "from typing import Dict"
    ]
   },
   {
@@ -116,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +133,7 @@
        "        [0, 0, 0, 0, 0, 1]], dtype=int64)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +154,7 @@
        "(1211, 6)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +179,7 @@
        " 0.18497109826589594]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,8 +190,8 @@
     "\n",
     "probs = []\n",
     "\n",
-    "for i in range(label_count):\n",
-    "    instances_with_label = y[:, i].todense().sum()\n",
+    "for label in range(label_count):\n",
+    "    instances_with_label = y[:, label].todense().sum()\n",
     "    probs.append(instances_with_label / rows_count)\n",
     "\n",
     "probs"
@@ -197,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +213,7 @@
        " 0.45033585713511676]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +274,7 @@
        "  0.16659823616559233]]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,20 +282,20 @@
    "source": [
     "joint_entropies = []\n",
     "\n",
-    "for i in range(label_count):\n",
+    "for label in range(label_count):\n",
     "    joint_entropies.append([])\n",
     "\n",
     "    for j in range(label_count):\n",
-    "        and_prob = probs[i] * probs[j]\n",
+    "        and_prob = probs[label] * probs[j]\n",
     "        joint_entropy = -1 * and_prob * math.log(and_prob, 2)\n",
-    "        joint_entropies[i].append(joint_entropy)\n",
+    "        joint_entropies[label].append(joint_entropy)\n",
     "\n",
     "joint_entropies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +304,7 @@
        "-0.24951987913203505"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +334,7 @@
        "-0.2830275713424767"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +354,7 @@
        "-0.28504225434308345"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +374,7 @@
        "-0.28753446262990323"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +406,7 @@
        " [0.815028901734104, 0.18497109826589594]]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,8 +417,8 @@
     "\n",
     "probs = []\n",
     "\n",
-    "for i in range(label_count):\n",
-    "    instances_with_label = y[:, i].todense().sum() # value = 1\n",
+    "for label in range(label_count):\n",
+    "    instances_with_label = y[:, label].todense().sum() # value = 1\n",
     "    instances_without_label = rows_count - instances_with_label # value = 0\n",
     "\n",
     "    probs.append([\n",
@@ -429,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +445,7 @@
        " 0.690832038687419]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +662,7 @@
        "  1.3816640773748379]]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +707,7 @@
        "1.3922061344524894"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -811,14 +813,14 @@
     }
    ],
    "source": [
-    "for i in range(label_count):\n",
+    "for label in range(label_count):\n",
     "    for j in range(label_count):\n",
-    "        print(cond_entropy(i,j))"
+    "        print(cond_entropy(label,j))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +857,170 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 9.4. Stablish code for entropy calculation\n",
+    "\n",
+    "Now that we are comfortable with the entropy calculation, let's make a more \"stable\" code for it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# by Copilot:\n",
+    "\n",
+    "class Entropy:\n",
+    "    def __init__(self, probs):\n",
+    "        self.probs = probs\n",
+    "        self.label_count = len(probs)\n",
+    "        self.entropies = self._get_entropies()\n",
+    "        self.joint_entropies = self._get_joint_entropies()\n",
+    "    \n",
+    "    def _get_entropies(self):\n",
+    "        entropies = []\n",
+    "\n",
+    "        for prob in self.probs:\n",
+    "            results = []\n",
+    "            for value in [0,1]:\n",
+    "                prob_for_value = prob[value]\n",
+    "                summand = prob_for_value * math.log(prob_for_value, 2)\n",
+    "                results.append(summand)\n",
+    "            \n",
+    "            entropy = -1 * sum(results)\n",
+    "            entropies.append(entropy)\n",
+    "\n",
+    "        return entropies\n",
+    "\n",
+    "    def _get_joint_entropies(self):\n",
+    "        joint_entropies = []\n",
+    "\n",
+    "        for x in range(self.label_count):\n",
+    "            joint_entropies.append([])\n",
+    "\n",
+    "            for y in range(self.label_count):\n",
+    "                results = []\n",
+    "                for value_i in [0,1]:\n",
+    "                    for value_j in [0,1]:\n",
+    "                        and_prob = self.probs[x][value_i] * self.probs[y][value_j]\n",
+    "                        summand = and_prob * math.log(and_prob, 2)\n",
+    "                        results.append(summand)\n",
+    "                        # print(f\"for x={x}, y={y}, value_i={value_i}, value_j={value_j}, and_prob={and_prob}, math.log(and_prob, 2) = {math.log(and_prob, 2)}, summand={summand}\")\n",
+    "\n",
+    "                joint_entropy = -1 * sum(results)\n",
+    "                joint_entropies[x].append(joint_entropy)\n",
+    "\n",
+    "        return joint_entropies\n",
+    "\n",
+    "    def get_cond_entropy(self, x, y):\n",
+    "        return self.joint_entropies[x][y] - self.entropies[y]\n",
+    "\n",
+    "    def get_cond_entropy_matrix(self):\n",
+    "        matrix = []\n",
+    "\n",
+    "        for i in range(self.label_count):\n",
+    "            matrix.append([])\n",
+    "            for j in range(self.label_count):\n",
+    "                matrix[i].append(self.get_cond_entropy(i,j))\n",
+    "        \n",
+    "        return matrix\n",
+    "\n",
+    "    def get_cond_entropy_matrix(self):\n",
+    "        matrix = []\n",
+    "\n",
+    "        for i in range(self.label_count):\n",
+    "            matrix.append"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: {0: 0.8125516102394715, 1: 0.1874483897605285},\n",
+       " 1: {0: 0.8637489677952106, 1: 0.13625103220478943},\n",
+       " 2: {0: 0.8373245251857968, 1: 0.16267547481420314},\n",
+       " 3: {0: 0.838150289017341, 1: 0.16184971098265896},\n",
+       " 4: {0: 0.7712634186622626, 1: 0.22873658133773742},\n",
+       " 5: {0: 0.815028901734104, 1: 0.18497109826589594}}"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Probabilities = Dict[int, Dict[int, float]]\n",
+    "\n",
+    "def calculate_probabilities(y: NDArray[np.int64]) -> Probabilities:\n",
+    "    dense_y = y.todense()\n",
+    "\n",
+    "    label_count = dense_y.shape[1]\n",
+    "    rows_count = dense_y.shape[0]\n",
+    "\n",
+    "    probs = {}\n",
+    "\n",
+    "    for label in range(label_count):\n",
+    "        probs[label] = {}\n",
+    "        y_label_specific = np.asarray(dense_y[:, label]).reshape(-1)\n",
+    "        # convert_matrix_to_vector\n",
+    "\n",
+    "        possible_values = np.unique(y_label_specific)\n",
+    "\n",
+    "        for value in possible_values:\n",
+    "            instances_with_label = np.count_nonzero(y_label_specific == value)\n",
+    "            probs[label][value] = instances_with_label / rows_count\n",
+    "    \n",
+    "    return probs\n",
+    "\n",
+    "y = datasets[\"scene\"][\"y_train\"]\n",
+    "probs = calculate_probabilities(y)\n",
+    "probs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 0.6961030672262447,\n",
+       " 1: 0.5743357592196299,\n",
+       " 2: 0.6406718924240619,\n",
+       " 3: 0.6387163439963871,\n",
+       " 4: 0.7758023710944532,\n",
+       " 5: 0.690832038687419}"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def calculate_entropies(probabilities: Probabilities) -> Dict[int, float]:\n",
+    "    entropies = {}\n",
+    "\n",
+    "    for label, calculated_probabilities in probabilities.items():\n",
+    "        results = []\n",
+    "        for _, prob in calculated_probabilities.items():\n",
+    "            summand = prob * math.log(prob, 2)\n",
+    "            results.append(summand)\n",
+    "        \n",
+    "        entropy = -1 * sum(results)\n",
+    "        entropies[label] = entropy\n",
+    "\n",
+    "    return entropies\n",
+    "\n",
+    "calculate_entropies(probs)"
+   ]
   }
  ],
  "metadata": {
