adds code to calculate joint probability

--- a/9_fourth_model_implementation.ipynb
+++ b/9_fourth_model_implementation.ipynb
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -999,13 +999,15 @@
        " 5: 0.690832038687419}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def calculate_entropies(probabilities: Probabilities) -> Dict[int, float]:\n",
+    "Entropies = Dict[int, float]\n",
+    "\n",
+    "def calculate_entropies(probabilities: Probabilities) -> Entropies:\n",
     "    entropies = {}\n",
     "\n",
     "    for label, calculated_probabilities in probabilities.items():\n",
@@ -1019,7 +1021,42 @@
     "\n",
     "    return entropies\n",
     "\n",
-    "calculate_entropies(probs)"
+    "entropies = calculate_entropies(probs)\n",
+    "entropies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.3922061344524894"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def calculate_joint_probability(probabilities: Probabilities, label_x: int, label_y: int):\n",
+    "    results = []\n",
+    "    \n",
+    "    for _, prob_i in probabilities[label_x].items():\n",
+    "        for _, prob_j in probabilities[label_y].items():\n",
+    "            and_prob = prob_i * prob_j\n",
+    "\n",
+    "            if and_prob > 0:  # avoid taking the log of 0\n",
+    "                summand = and_prob * np.log2(and_prob)\n",
+    "                results.append(summand)\n",
+    "    \n",
+    "    joint_probability = -1 * sum(results)\n",
+    "    return joint_probability\n",
+    "\n",
+    "calculate_joint_probability(probs, 0, 0)"
    ]
   }
  ],
