adds understanding of the upper triangle sum

--- a/9_fourth_model_implementation.ipynb
+++ b/9_fourth_model_implementation.ipynb
@@ -1467,7 +1467,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 9.5.1 Why summing the upper triangle?"
+    "### 9.5.1 Why summing the upper triangle?\n",
+    "\n",
+    "The article proposes that the we sum the upper triangle of the LOP matrix, and this sum is the value of the fitness score.\n",
+    "\n",
+    "My interpretation is that, since the article states that labels with more uncertainty (higher entropy) should be placed towards the end of the chain, then the upper triangle, as it considers all elements above the diagonal, will give a \"higher weight\" to the labels towards the end of the chain.\n",
+    "\n",
+    "If the labels towards the end of the chain really have higher entropies, then the final column will carry the highest values seen. Summing all of that, we will end up with a higher fitness score."
    ]
   },
   {
